[gd_scene load_steps=11 format=3 uid="uid://cja0hhaaqvm75"]

[ext_resource type="Script" path="res://player/snowball/snowball.gd" id="1_fa4v3"]
[ext_resource type="AudioStream" uid="uid://cfwfwf6smldvr" path="res://player/snowball/snowball_hit.ogg" id="3_14ar3"]
[ext_resource type="Texture2D" uid="uid://dga3vkaa33j8x" path="res://player/snowball/snowball_particle.png" id="3_wn4o1"]

[sub_resource type="SphereMesh" id="SphereMesh_jraq8"]

[sub_resource type="SphereShape3D" id="SphereShape3D_rxyoh"]

[sub_resource type="Curve" id="Curve_wqt10"]
_data = [Vector2(0, 0.210526), 0.0, 0.650717, 0, 0, Vector2(0.990196, 0), 0.107368, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_fckxb"]
curve = SubResource("Curve_wqt10")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_j0eto"]
emission_shape_scale = Vector3(0.1, 0.1, 0.1)
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, 1, 0)
spread = 50.0
initial_velocity_min = 2.0
initial_velocity_max = 5.0
scale_curve = SubResource("CurveTexture_fckxb")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p6coy"]
transparency = 2
alpha_scissor_threshold = 0.925
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("3_wn4o1")
emission = Color(0.639216, 0.784314, 0.407843, 1)
emission_energy_multiplier = 15.17
billboard_mode = 1
billboard_keep_scale = true

[sub_resource type="QuadMesh" id="QuadMesh_cxefs"]
material = SubResource("StandardMaterial3D_p6coy")
size = Vector2(0.5, 0.5)

[node name="Snowball" type="RigidBody3D"]
physics_interpolation_mode = 1
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1_fa4v3")
speed = 20

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
mesh = SubResource("SphereMesh_jraq8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
shape = SubResource("SphereShape3D_rxyoh")

[node name="snow_break" type="GPUParticles3D" parent="."]
emitting = false
amount = 20
one_shot = true
explosiveness = 1.0
randomness = 0.5
process_material = SubResource("ParticleProcessMaterial_j0eto")
draw_pass_1 = SubResource("QuadMesh_cxefs")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_14ar3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="snow_break" to="." method="_on_snow_break_finished"]
